--- a/docs/proposal/index.css
+++ b/docs/proposal/index.css
@@ -1,26 +1,51 @@
+/* declare variables */
+:root {
+  /* backgrounds */
+  --bg1: #2a2a2a;
+  --bg2: #212121;
+
+  /* foregrounds */
+  --fg12: #f5f5f5;
+  --fg11: #e9e9e9;
+  --fg10: #c7c7c7;
+  --fg6: #656565;
+
+  /* specify color scheme to browser */
+  /* customizes scrollbar to fit with theme */
+  color-scheme: dark;
+}
+
 * {
+  /* remove default browser styles */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  /* set font */
+  font-family: "Inter", Helvetica, sans-serif;
+  color: var(--fg11);
 }
 
 body {
+  min-height: 100svh;
+  background: var(--bg1);
+
+  /* center contet */
   display: grid;
   place-items: center;
-  min-height: 100svh;
-  padding: 5rem;
-  font-family: Helvetica, sans-serif;
 }
 
 main {
-  text-align: center;
+  width: clamp(650px, 50%, 2000px);
   min-height: 90svh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  background: var(--bg2);
+
+  margin: 5rem 0;
+  padding: 64px;
+  border-radius: 16px;
 }
 
-article {
-  margin-top: 2rem;
-  width: clamp(18.75rem, 60%, 62.5rem);
+/* utility */
+.gray {
+  color: var(--fg10);
 }
