--- a/docs/global.css
+++ b/docs/global.css
@@ -8,6 +8,7 @@
   --fg12: #f5f5f5;
   --fg11: #e9e9e9;
   --fg10: #c7c7c7;
+  --fg7: #898989;
   --fg6: #656565;
 
   /* specify color scheme to browser */
@@ -37,7 +38,6 @@ body {
 
 main {
   width: clamp(650px, 50%, 2000px);
-  min-height: 90svh;
   background: var(--bg2);
 
   margin: 5rem 0;
@@ -48,4 +48,10 @@ main {
 /* utility */
 .gray {
   color: var(--fg10);
+}
+
+a.disabled {
+  pointer-events: none;
+  text-decoration: none;
+  color: var(--fg7);
 }
