--- a/docs/article.css
+++ b/docs/article.css
@@ -18,8 +18,9 @@ h2 {
 }
 
 h3 {
-  font-size: 1rem;
+  font-size: 1.25rem;
   font-weight: 500;
+  margin: 0.25rem 0 1rem 0;
   color: var(--fg10);
 }
 
