update punctuation, styling

--- a/docs/global.css
+++ b/docs/global.css
@@ -54,7 +54,7 @@ main {
   padding: 64px;
 
   /* comment out the line below to print page */
-  padding-bottom: 12px;
+  /* padding-bottom: 12px; */
 
   border-radius: 16px;
 }
